cmake_minimum_required(VERSION 3.1)
project(background-processor)

#-------------------------------------------------------------------------------------------
# Options
#-------------------------------------------------------------------------------------------

#-------------------------------------------------------------------------------------------
# Sub-projects
#-------------------------------------------------------------------------------------------
add_subdirectory(Code)

#-------------------------------------------------------------------------------------------
# Defines
#-------------------------------------------------------------------------------------------

#-------------------------------------------------------------------------------------------
# Library definition
#-------------------------------------------------------------------------------------------

#-------------------------------------------------------------------------------------------
# Compiler Flags
#-------------------------------------------------------------------------------------------

#-------------------------------------------------------------------------------------------
# Include dirs
#-------------------------------------------------------------------------------------------
target_include_directories(background-processor PUBLIC Code)
#-------------------------------------------------------------------------------------------
# Libraries
#-------------------------------------------------------------------------------------------

#-------------------------------------------------------------------------------------------
# Installation
#-------------------------------------------------------------------------------------------
