cmake_minimum_required(VERSION 3.1)

#-------------------------------------------------------------------------------------------
# Options
#-------------------------------------------------------------------------------------------
if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
    set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP" )
endif()

#-------------------------------------------------------------------------------------------
# Sub-projects
#-------------------------------------------------------------------------------------------
add_subdirectory(Base)
add_subdirectory(External)

#-------------------------------------------------------------------------------------------
# Defines
#-------------------------------------------------------------------------------------------

#-------------------------------------------------------------------------------------------
# Library definition
#-------------------------------------------------------------------------------------------

#-------------------------------------------------------------------------------------------
# Compiler Flags
#-------------------------------------------------------------------------------------------

#-------------------------------------------------------------------------------------------
# Include dirs
#-------------------------------------------------------------------------------------------

#-------------------------------------------------------------------------------------------
# Libraries
#-------------------------------------------------------------------------------------------

#-------------------------------------------------------------------------------------------
# Installation
#-------------------------------------------------------------------------------------------
